--- a/assets/style.css
+++ b/assets/style.css
@@ -120,7 +120,7 @@ section:last-of-type {
   margin-top: 2rem;
 }
 
-/* Hero Section */
+/* Hero/ Introduction Section */
 .hero {
   text-align: center;
   color: var(--dark-green);
